--- a/.github/workflows/appmap-analysis.yml
+++ b/.github/workflows/appmap-analysis.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/cache/save@v3
         if: always()
         with:
-          path: tmp/appmap
+          path: ./tmp/appmap
           key: appmaps-${{ github.sha }}-${{ github.run_attempt }}
 
   appmap-analysis:
