--- a/.github/workflows/appmap-analysis.yml
+++ b/.github/workflows/appmap-analysis.yml
@@ -12,8 +12,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
+      - run: 'wget https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-linux-x86_64'
+      - run: 'sudo mv docker-compose-linux-x86_64 /usr/libexec/docker/cli-plugins/docker-compose'
+      - run: 'sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose'
+      
       - uses: actions/checkout@v3
 
       - name: Set up JDK 17
