revertme: (AppMap) Create the baseline AppMap archive

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,6 @@
+Here's your updated GitHub Actions workflow file with the AppMap CI setup:
+
+```
 name: build
 
 on:
@@ -9,14 +12,7 @@ on:
     - cron: '0 0 * * 0'
 
 permissions: 
-  # Allows the EndBug/add-and-commit step to commit the package manager changes,
-  # adding the AppMap language library and configuration file appmap.yml.
-  # Once the EndBug/add-and-commit is removed, this permission can be removed, 
-  # unless you need it for other reasons.
   contents: write
-
-  # Allows the getappmap/archive-action to write a PR comment with the 
-  # AppMap configuration status.
   pull-requests: write
 
 jobs:
@@ -38,9 +34,6 @@ jobs:
           distribution: 'adopt'
           cache: maven
           
-      # Begin AppMap CI language agent installation
-      # This snippet can be safely removed once the AppMap language agent has been
-      # added to the project dependencies, and appmap.yml has been created.
       - name: Enable appmap gem update
         run: bundle config unset deployment
       - name: Install AppMap tools
@@ -52,7 +45,15 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: "ci: Add AppMap language agent and appmap.yml"
-      # End AppMap CI language agent installation
 
       - name: Maven Test
         run: ./mvnw test
+
+      # Begin AppMap bootstrap archive step
+      - name: Archive AppMaps
+        id: appmap-bootstrap-archive-appmaps
+        uses: getappmap/archive-action@v1
+        with:
+          revision: ${{ github.event.pull_request.base.sha }}
+      # End AppMap bootstrap archive step
+```
