--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,20 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
           cache: maven
+      
+      # Begin AppMap CI language agent installation.
+      # This snippet can be safely removed once the AppMap language agent has been
+      # added to the project dependencies, and appmap.yml has been created.
+      - name: Install AppMap tools
+        id: install-appmap
+        uses: getappmap/install-action@v1
+        with:
+          project-type: gradle
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: "ci: Add AppMap language agent and appmap.yml"
+      # End AppMap CI language agent installation
 
       - name: Maven Test
         run: ./mvnw test
