--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,12 @@
 name: build
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
+  schedule:
+    - cron: '0 0 * * 0'
 
 jobs:
   test:
@@ -12,8 +17,6 @@ jobs:
       - run: 'sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose'
       
       - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}  
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
