--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,7 @@
 name: build
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-  schedule:
-    - cron: '0 0 * * 0'
 
 jobs:
   test:
@@ -27,3 +22,11 @@ jobs:
 
       - name: Maven Test
         run: ./mvnw test
+        
+      # Begin AppMap bootstrap archive step
+      - name: Archive AppMaps
+        id: appmap-bootstrap-archive-appmaps
+        uses: getappmap/archive-action@v1
+        with:
+          revision: ${{ github.event.pull_request.base.sha }}
+      # End AppMap bootstrap archive step
