revertme: (AppMap) Enable install-action to commit to the branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,17 +3,6 @@ name: build
 on:
   pull_request:
 
-permissions:
-  # Allows the EndBug/add-and-commit step to commit the package manager changes,
-  # adding the AppMap language library and configuration file appmap.yml.
-  # Once the EndBug/add-and-commit is removed, this permission can be removed, 
-  # unless you need it for other reasons.
-  contents: write
-
-  # Allows the getappmap/archive-action to write a PR comment with the 
-  # AppMap configuration status.
-  pull-requests: write
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -23,6 +12,8 @@ jobs:
       - run: 'sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose'
       
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
