--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,17 @@ name: build
 
 on:
   pull_request:
+  
+permissions: 
+  # Allows the EndBug/add-and-commit step to commit the package manager changes,
+  # adding the AppMap language library and configuration file appmap.yml.
+  # Once the EndBug/add-and-commit is removed, this permission can be removed, 
+  # unless you need it for other reasons.
+  contents: write
+
+  # Allows the getappmap/archive-action to write a PR comment with the 
+  # AppMap configuration status.
+  pull-requests: write
 
 jobs:
   test:
@@ -10,7 +21,7 @@ jobs:
       - run: 'wget https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-linux-x86_64'
       - run: 'sudo mv docker-compose-linux-x86_64 /usr/libexec/docker/cli-plugins/docker-compose'
       - run: 'sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose'
-      
+
       - uses: actions/checkout@v3
 
       - name: Set up JDK 17
@@ -22,11 +33,3 @@ jobs:
 
       - name: Maven Test
         run: ./mvnw test
-
-      # Begin AppMap bootstrap archive step
-      - name: Archive AppMaps
-        id: appmap-bootstrap-archive-appmaps
-        uses: getappmap/archive-action@v1
-        with:
-          revision: ${{ github.event.pull_request.base.sha }}
-      # End AppMap bootstrap archive step
