--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,7 @@
 name: build
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-  schedule:
-    - cron: '0 0 * * 0'
 
 jobs:
   test:
@@ -17,6 +12,8 @@ jobs:
       - run: 'sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose'
       
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
@@ -27,20 +24,3 @@ jobs:
 
       - name: Maven Test
         run: ./mvnw test
-
-      - name: Save AppMaps
-        uses: actions/cache/save@v3
-        if: always()
-        with:
-          path: ./tmp/appmap
-          key: appmaps-${{ github.sha }}-${{ github.run_attempt }}
-
-  appmap-analysis:
-    if: always()
-    needs: [ test ]
-    uses: getappmap/analyze-action/.github/workflows/appmap-analysis.yml@v1
-    permissions:
-      actions: read
-      contents: read
-      checks: write
-      pull-requests: write
