--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
       <artifactId>mysql</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <version>6.2.4</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
@@ -147,6 +153,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
       <version>3.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.samples</groupId>
+      <artifactId>spring-petclinic</artifactId>
+      <version>3.2.0-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
